--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -36,6 +36,10 @@
   padding: 0;
   gap: 0.5rem;
 }
+
+.ku-submenuList {
+  list-style: none;
+}
 .ku-menuItem {
   position: relative;
   border-radius: 0.375rem;
